WIP drafting presentation

--- a/00_Overview.ipynb
+++ b/00_Overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -19,7 +19,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,13 +37,15 @@
     }
    },
    "source": [
-    "<div style=float:right><img src=\"assets/img/parent_mfr_coeffs.png\" style=\"margin: 0px 20px 0px 20px; width=45%\"></img></div>\n",
+    "<div style=\"float:right; width=45%\"><img src=\"assets/img/parent_mfr_coeffs.png\" style=\"margin: 0px 20px 0px 20px\"></div>\n",
     "\n",
     "\n",
     "\n",
     "# Hierachical Modelling with PyMC3 and PyStan\n",
     "\n",
-    "Can we use Bayesian inference to determine unusual car emissions tests for Volkswagen? \n",
+    "Can we use Bayesian inference to determine unusual car emissions tests for Volkswagen?   \n",
+    "#PyDataLondon Sun 08 May 2016   \n",
+    "\n",
     "\n",
     "<br/>\n",
     "\n",
@@ -53,11 +55,254 @@
     "<a href=\"https:/twitter.com/jonsedar\">@jonsedar</a>  \n",
     "<a href='http://www.applied.ai'>applied.ai</a>  \n",
     "\n",
-    "#PyDataLondon 11:45–12:30 Sun 08 May 2016 \n",
+    "\n",
+    "\n",
     "\n",
     "<div style=float:left><img src=\"assets/img/appliedai-logo.png\" width=100/></div>\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# In the next 30 mins you will:\n",
+    "\n",
+    "\n",
+    "1. Gain a better understanding of Bayesian inference\n",
+    "\n",
+    "2. Learn a bit about the capabilities of PyMC3 and PyStan\n",
+    "\n",
+    "3. Think about giving it a try on your problems\n",
+    "\n",
+    "\n",
+    "(... hopefully)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<small>1. Gain a better understanding of Bayesian inference</small>\n",
+    "\n",
+    "# It tells us more about the \"why\" and \"how\"\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "<div style=\"float:left; width:45%\"><img src=\"assets/img/ppc_outlierdetection.png\" style=\"margin: 0px 20px 0px 20px\">\n",
+    "<h4>[How do these outliers differ?](https://github.com/pymc-devs/pymc3/blob/master/pymc3/examples/GLM-robust-with-outlier-detection.ipynb)</h4>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"float:right; width:45%\"><img src=\"assets/img/sneeze_counts.png\" style=\"margin: 0px 20px 0px 20px\">\n",
+    "<h4>[What affects my sneezing?](https://gist.github.com/jonsedar/d600ff796fc8a42555410d72e4426d99)</h4>\n",
+    "</div>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style=\"float:left; width:45%\"><img src=\"assets/img/processchange_convrate.png\" style=\"margin: 0px 20px 0px 20px\">\n",
+    "<h4>[Was there a change in my conversion rate?](http://blog.applied.ai/a-bayesian-approach-to-monitoring-process-change-part-2/)</h4>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"float:right; width:45%\"><img src=\"assets/img/mfr_unpooled_forestplot.png\" style=\"margin: 0px 20px 0px 20px\">\n",
+    "<h4>[What's the impact of car mfr on emissions?](https://github.com/jonsedar/pymc3_vs_pystan)</h4>\n",
+    "</div>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<small>2. Learn a bit about the capabilities of PyMC3 and PyStan</small>\n",
+    "\n",
+    "# Two excellent and quite different open-source libraries for Bayesian Inference\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "<div style=\"float:left; width:30%\"><img src=\"assets/img/pymc3_logo.png\" style=\"margin: 0px 20px 0px 20px\">\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"float:right; width:30%\"><img src=\"assets/img/stan_logo.png\" style=\"margin: 0px 20px 0px 20px\">\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# PyMC3\n",
+    "\n",
+    "\n",
+    "+ Pure python implementation of symbolic statistical modelling\n",
+    "+ Very efficient gradient-based samplers using the Theano library for autodiff / graph computation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style=\"width:90%\"><img src=\"assets/img/github_pymc3.png\" style=\"margin: 0px 20px 0px 20px\">\n",
+    "</div>\n",
+    "\n",
+    "https://github.com/pymc-devs/pymc3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Includes\n",
+    "\n",
+    "+ Metropolis-Hastings, Hamiltonian Monte-Carlo (HMC), Binary-Metropolis, Slice samplers \n",
+    "+ Non U-Turn Sampler (NUTS) developed by Hoffman & Gelman in 2014 (only otherwise available in Stan)\n",
+    "+ Variational Inference (ADVI)\n",
+    "+ A host of helpful functions for model evaluation \n",
+    "    + posterior predictive checks (PPC)\n",
+    "    + DIC / WAIC calcs\n",
+    "    + LOO cross-validation\n",
+    "    + Traceplotting / Forestplotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# PyStan\n",
+    "\n",
+    "+ Thin Python wrapper around Stan (see also RStan, MStan, CmdStan)\n",
+    "+ Stan is a C++ based probabilistic programming language \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<div style=\"width:90%\"><img src=\"assets/img/github_stan.png\" style=\"margin: 0px 20px 0px 20px\">\n",
+    "</div>\n",
+    "\n",
+    "+ Strong academic support via researchers inc. Gelman, Carpenter, Hoffman etc. (many of them at Columbia Uni)\n",
+    "+ https://github.com/stan-dev/stan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Stan includes\n",
+    "\n",
+    "+ full Bayesian statistical inference with MCMC sampling (NUTS, HMC)\n",
+    "+ approximate Bayesian inference with variational inference (ADVI)\n",
+    "+ penalized maximum likelihood estimation with optimization (L-BFGS)\n",
+    "\n",
+    "\n",
+    "## PyStan includes\n",
+    "\n",
+    "+ Convenience functions for compiling Stan models and running them\n",
+    "+ A handful of plotting functions \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Some existing comparisons\n",
+    "\n",
+    "+ Jake Vanderplas blogpost [Frequentism and Bayesianism IV: How to be a Bayesian in Python, Jun 2014](http://jakevdp.github.io/blog/2014/06/14/frequentism-and-bayesianism-4-bayesian-in-python/) (Thorough eval of PyMC2 vs PyStan vs emcee)\n",
+    "+ Chris Burns blogpost [A Tale of Three Samplers, Jul 2014](https://users.obs.carnegiescience.edu/~cburns/site/?p=120) (Overview of PyMC2 vs PyStan vs emcee)\n",
+    "+ Llewelyn Richards-Ward blogpost: [You’ll never guess what’s been happening with PyStan and PyMC—Click here to find out, Nov 2015](http://andrewgelman.com/2015/10/15/whats-the-one-thing-you-have-to-know-about-pystan-and-pymc-click-here-to-find-out/) (Overview of PyMC3 vs PyStan)\n",
+    "+ Issac Slavit blogpost [Solving the Bayesian German Tank problem with PyMC and PyStan, Dec 2015](http://isaacslavitt.com/2015/12/19/german-tank-problem-with-pymc-and-pystan/) (More detailed comparison of PyMC3 vs PyStan)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<small>3. Think about giving it a try on your problems</small>\n",
+    "\n",
+    "# \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "`https://github.com/jonsedar/pymc3_vs_pystan`"
    ]
   },
   {
@@ -81,22 +326,7 @@
     }
    },
    "source": [
-    "Llewelyn Richards-Ward: http://andrewgelman.com/2015/10/15/whats-the-one-thing-you-have-to-know-about-pystan-and-pymc-click-here-to-find-out/\n",
-    "\n",
-    "Hierarchical https://github.com/pymc-devs/pymc3/blob/master/pymc3/examples/hierarchical.ipynb\n",
-    "\n",
-    "Cars "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "# Overview\n",
+    "##### Overview\n",
     "\n",
     "Bayesian inference bridges the gap between white-box model introspection and black-box predictive performance. We gain the ability to fully specify a model and fit it to observed data according to our prior knowledge. Small datasets are handled well and the overall method and results are very intuitive: lending to both statistical insight and future prediction.\n",
     "\n",
