--- a/40_HierarchicalLinearRegression.ipynb
+++ b/40_HierarchicalLinearRegression.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -191,21 +191,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python: 3.5.1 |Continuum Analytics, Inc.| (default, Dec  7 2015, 11:24:55) \n",
-      "[GCC 4.2.1 (Apple Inc. build 5577)]\n",
       "Recursion limit 10000\n",
-      "theano: 0.8.1\n",
-      "PyMC3: 3.0\n",
-      "PyStan: 2.9.0.0\n"
+      "2016-05-05 \n",
+      "\n",
+      "CPython 3.5.1\n",
+      "IPython 4.1.2\n",
+      "\n",
+      "numpy 1.11.0\n",
+      "scipy 0.17.0\n",
+      "pandas 0.18.0\n",
+      "matplotlib 1.5.1\n",
+      "pymc3 3.0\n",
+      "theano 0.8.1\n",
+      "pystan 2.9.0.0\n",
+      "\n",
+      "compiler   : GCC 4.2.1 (Apple Inc. build 5577)\n",
+      "system     : Darwin\n",
+      "release    : 14.5.0\n",
+      "machine    : x86_64\n",
+      "processor  : i386\n",
+      "CPU cores  : 4\n",
+      "interpreter: 64bit\n",
+      "Git hash   : f5431aa4bf55c26a0ecb5308258285f392c5e1ca\n"
      ]
     }
    ],
    "source": [
-    "print('Python: {}'.format(sys.version))\n",
+    "# %install_ext https://raw.githubusercontent.com/rasbt/watermark/master/watermark.py\n",
+    "# %load_ext watermark\n",
     "print('Recursion limit {}'.format(sys.getrecursionlimit()))\n",
-    "print('theano: {}'.format(thno.__version__))\n",
-    "print('PyMC3: {}'.format(pm.__version__))\n",
-    "print('PyStan: {}'.format(pystan.__version__))"
+    "%watermark -dmvgp numpy,scipy,pandas,matplotlib,pymc3,theano,pystan"
    ]
   },
   {
