mostly completed overview

--- a/40_HierarchicalLinearRegression.ipynb
+++ b/40_HierarchicalLinearRegression.ipynb
@@ -2,14 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:90% !important; } div.cell.selected { border-left-width: 1px !important;}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.core.display import HTML\n",
     "HTML(\"<style>.container { width:90% !important; } div.cell.selected { border-left-width: 1px !important;}</style>\")"
@@ -245,11 +259,11 @@
    },
    "outputs": [],
    "source": [
-    "sample_switches = {'pooled':{'pymc':1, 'stan':1},\n",
-    "                   'unpooled':{'pymc':1, 'stan':1},\n",
-    "                   'fullyunpooled':{'pymc':1},\n",
-    "                   'partpooled':{'pymc':1, 'stan':1},\n",
-    "                   'hier':{'pymc':1, 'stan':1}}\n",
+    "sample_switches = {'pooled':{'pymc':0, 'stan':0},\n",
+    "                   'unpooled':{'pymc':0, 'stan':0},\n",
+    "                   'fullyunpooled':{'pymc':0},\n",
+    "                   'partpooled':{'pymc':0, 'stan':0},\n",
+    "                   'hier':{'pymc':0, 'stan':0}}\n",
     "\n",
     "runtimes = defaultdict(lambda : defaultdict(dict))"
    ]
@@ -2257,6 +2271,7 @@
     "\n",
     "        # define priors\n",
     "        b0 = pm.Normal('b0_mfr', mu=b0_mu, sd=b0_sd, shape=n_mfr)\n",
+    "        \n",
     "        b1 = pm.Normal('b1_fuel_type[T.petrol]', mu=0, sd=10)\n",
     "        b2a = pm.Normal('b2a_trans[T.manual]', mu=0, sd=10)\n",
     "        b2b = pm.Normal('b2b_trans[T.semiauto]', mu=0, sd=10)\n",
