update initial analysis slides

--- a/00_Overview.ipynb
+++ b/00_Overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -19,7 +19,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,9 +159,9 @@
     "<br/>\n",
     "<img src=\"assets/img/continuum.png\" style=\"margin-left:auto; margin-right:auto; width:70%\"></img>\n",
     "\n",
-    "+ Fully specify a model and fit to observed data according to prior knowledge. \n",
+    "+ Fully specify a model and fit to observed (small-ish) data according to prior knowledge. \n",
     "\n",
-    "+ Small datasets are handled well \n",
+    "+ Fitting is black-boxy (MCMC, ADVI etc)\n",
     "\n",
     "+ Method and results are intuitive: aiding statistical insight and future prediction.\n",
     "\n",
@@ -397,7 +397,7 @@
     }
    },
    "source": [
-    "<div style=\"width:70%\"><img src=\"assets/img/bayesianmixer.png\" style=\"margin-left:auto; margin-right:auto;\">\n",
+    "<div style=\"width:60%\"><img src=\"assets/img/bayesianmixer.png\" style=\"margin-left:auto; margin-right:auto;\">\n",
     "</div>"
    ]
   },
@@ -409,7 +409,20 @@
     }
    },
    "source": [
-    "# Lets get on with it"
+    "# Lets get on with it\n",
+    "\n",
+    "<img src=\"assets/img/getonwithit.jpg\" style=\"margin: 0px 20px 0px 20px; width=45%\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Bayesian Hierarchical Linear Regression in PyMC3 and PyStan"
    ]
   },
   {
