updated hier models

--- a/32_MoreModelEvaluation_PyMC3.ipynb
+++ b/32_MoreModelEvaluation_PyMC3.ipynb
@@ -94,6 +94,10 @@
    },
    "outputs": [],
    "source": [
+    "# filter warnings for presentation's sake\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "# general packages\n",
     "import sqlite3\n",
     "from convenience_functions import *\n",
