--- a/00_Overview.ipynb
+++ b/00_Overview.ipynb
@@ -218,11 +218,72 @@
     }
    },
    "source": [
-    "# PyMC3\n",
+    "# Which should I use?\n",
     "\n",
+    "<table style=\"border-collapse:collapse;\">\n",
+    "<col style=\"width:50%\">\n",
+    "<col style=\"width:50%\">\n",
     "\n",
-    "+ Pure python implementation of symbolic statistical modelling\n",
-    "+ Very efficient gradient-based samplers using the Theano library for autodiff / graph computation\n"
+    "<thead>\n",
+    "<tr>\n",
+    "<th style=\"vertical-align:top;\">\n",
+    "PyMC3 for rapid prototyping\n",
+    "</th>\n",
+    "<th style=\"vertical-align:top;\">\n",
+    "Stan (PyStan) for gnarly modelling\n",
+    "</th>\n",
+    "</tr>\n",
+    "</thead>\n",
+    "<tbody style=\"font-size:smaller;\">\n",
+    "<tr>\n",
+    "<td style=\"vertical-align:top; background-color:#F9F9F9\">\n",
+    "Sampling: NUTS, HMC\n",
+    "</td>\n",
+    "<td style=\"vertical-align:top;background-color: #F9F9F9\">\n",
+    "Smapling: NUTS, HMC, Metropolis-Hastings, Slice</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td style=\"vertical-align:top;\">\n",
+    "ADVI\n",
+    "</td>\n",
+    "<td style=\"vertical-align:top;\">\n",
+    "Variational Inference (ADVI), L-BFGS max-likelihood optimisation\n",
+    "</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td style=\"vertical-align:top; background-color:#F9F9F9\">\n",
+    "Pure Python (theano) allows arbitrary functions, external samplers\n",
+    "</td>\n",
+    "<td style=\"vertical-align:top; background-color:#F9F9F9\">\n",
+    "Python wrapper, C++ based prop. language\n",
+    "</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td style=\"vertical-align:top;\">\n",
+    "Nicer plotting: traces, forest, autocorrolation\n",
+    "</td>\n",
+    "<td style=\"vertical-align:top;\">\n",
+    "Basic trace plotting\n",
+    "</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td style=\"vertical-align:top; background-color:#F9F9F9\">\n",
+    "PPC post-modelling, DIC, WAIC, LOO-CV.\n",
+    "</td>\n",
+    "<td style=\"vertical-align:top; background-color:#F9F9F9\">\n",
+    "PPC (within model at runtime)\n",
+    "</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td style=\"vertical-align:top;\">\n",
+    "In rapid development, growing examples & awareness, Pythonic docs\n",
+    "</td>\n",
+    "<td style=\"vertical-align:top;\">\n",
+    "V.strong academic support (Gelman, Carpenter, Hoffman etc) usually gets cutting edge first\n",
+    "</td>\n",
+    "</tr>\n",
+    "</tbody>\n",
+    "</table>\n"
    ]
   },
   {
@@ -244,44 +305,12 @@
     }
    },
    "source": [
-    "## Includes\n",
-    "\n",
-    "+ Metropolis-Hastings, Hamiltonian Monte-Carlo (HMC), Binary-Metropolis, Slice samplers \n",
-    "+ Non U-Turn Sampler (NUTS) developed by Hoffman & Gelman in 2014 (only otherwise available in Stan)\n",
-    "+ Variational Inference (ADVI)\n",
-    "+ A host of helpful functions for model evaluation \n",
-    "    + posterior predictive checks (PPC)\n",
-    "    + DIC / WAIC calcs\n",
-    "    + LOO cross-validation\n",
-    "    + Traceplotting / Forestplotting"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
     "<div style=\"width:90%\"><img src=\"assets/img/github_pymc3.png\" style=\"margin: 0px 20px 0px 20px\">\n",
     "</div>\n",
     "\n",
-    "https://github.com/pymc-devs/pymc3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "# PyStan\n",
-    "\n",
-    "+ Thin Python wrapper around Stan (see also RStan, MStan, CmdStan)\n",
-    "+ Stan is a C++ based probabilistic programming language \n"
+    "<div style=\"width:90%\"><img src=\"assets/img/github_stan.png\" style=\"margin: 0px 20px 0px 20px\">\n",
+    "</div>\n",
+    "\n"
    ]
   },
   {
@@ -293,28 +322,6 @@
    },
    "source": [
     "PySTAN is a wrapper around STAN, a major3 open-source framework for Bayesian inference developed by Gelman, Carpenter, Hoffman and many others. STAN also has HMC and NUTS samplers, and recently, Variational Inference - which is a very efficient way to approximate the joint probability distribution. Models are specified in a custom syntax and compiled to C++."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Stan includes\n",
-    "\n",
-    "+ Full Bayesian statistical inference with MCMC sampling (NUTS, HMC)\n",
-    "+ Approximate Bayesian inference with variational inference (ADVI)\n",
-    "+ Penalized maximum likelihood estimation with optimization (L-BFGS)\n",
-    "\n",
-    "<br/>\n",
-    "\n",
-    "## PyStan includes\n",
-    "\n",
-    "+ Convenience functions for compiling Stan models and running them\n",
-    "+ A handful of plotting functions \n"
    ]
   },
   {
