minor update to overview slides

--- a/00_Overview.ipynb
+++ b/00_Overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -19,7 +19,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
     }
    },
    "source": [
-    "# In the next 45 mins you will:\n",
+    "# In the next ~30 mins you will:\n",
     "\n",
     "\n",
     "1. Gain a better understanding of Bayesian inference\n",
@@ -220,7 +220,7 @@
    "source": [
     "# Which should I use?\n",
     "\n",
-    "<table style=\"border-collapse:collapse;\">\n",
+    "<table style=\"border-collapse:collapse; border-spacing: 10;\">\n",
     "<col style=\"width:50%\">\n",
     "<col style=\"width:50%\">\n",
     "\n",
@@ -237,14 +237,14 @@
     "<tbody style=\"font-size:smaller;\">\n",
     "<tr>\n",
     "<td style=\"vertical-align:top; background-color:#F9F9F9\">\n",
-    "Sampling: NUTS, HMC\n",
+    "Sampling: NUTS, HMC, Metropolis-Hastings, Binary-Metropolis, Slice</td>\n",
     "</td>\n",
     "<td style=\"vertical-align:top;background-color: #F9F9F9\">\n",
-    "Smapling: NUTS, HMC, Metropolis-Hastings, Slice</td>\n",
+    "Sampling: NUTS, HMC\n",
     "</tr>\n",
     "<tr>\n",
     "<td style=\"vertical-align:top;\">\n",
-    "ADVI\n",
+    "Variational Inference (ADVI)\n",
     "</td>\n",
     "<td style=\"vertical-align:top;\">\n",
     "Variational Inference (ADVI), L-BFGS max-likelihood optimisation\n",
@@ -252,10 +252,10 @@
     "</tr>\n",
     "<tr>\n",
     "<td style=\"vertical-align:top; background-color:#F9F9F9\">\n",
-    "Pure Python (theano) allows arbitrary functions, external samplers\n",
+    "Pure Python (theano base) allows for arbitrary functions, closer coupling with code, external samplers\n",
     "</td>\n",
     "<td style=\"vertical-align:top; background-color:#F9F9F9\">\n",
-    "Python wrapper, C++ based prop. language\n",
+    "Python wrapper, around C++ compiled code. Hard to couple and forget about debugging\n",
     "</td>\n",
     "</tr>\n",
     "<tr>\n",
@@ -263,7 +263,7 @@
     "Nicer plotting: traces, forest, autocorrolation\n",
     "</td>\n",
     "<td style=\"vertical-align:top;\">\n",
-    "Basic trace plotting\n",
+    "Basic trace plotting in PyStan\n",
     "</td>\n",
     "</tr>\n",
     "<tr>\n",
@@ -276,10 +276,10 @@
     "</tr>\n",
     "<tr>\n",
     "<td style=\"vertical-align:top;\">\n",
-    "In rapid development, growing examples & awareness, Pythonic docs\n",
+    "In rapid development, growing number of examples & general community awareness, nice Pythonic docs. Still in beta.\n",
     "</td>\n",
     "<td style=\"vertical-align:top;\">\n",
-    "V.strong academic support (Gelman, Carpenter, Hoffman etc) usually gets cutting edge first\n",
+    "Strong academic support (Gelman, Carpenter, Hoffman etc) usually gets cutting edge first. Also supported by NumFOCUS. Docs are pdf but good. Compiled models are more suitable for use in production\n",
     "</td>\n",
     "</tr>\n",
     "</tbody>\n",
@@ -305,10 +305,12 @@
     }
    },
    "source": [
-    "<div style=\"width:90%\"><img src=\"assets/img/github_pymc3.png\" style=\"margin: 0px 20px 0px 20px\">\n",
+    "<div style=\"width:80%\"><img src=\"assets/img/github_pymc3.png\" style=\"margin: 0px 20px 0px 20px\">\n",
     "</div>\n",
     "\n",
-    "<div style=\"width:90%\"><img src=\"assets/img/github_stan.png\" style=\"margin: 0px 20px 0px 20px\">\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<div style=\"width:80%\"><img src=\"assets/img/github_stan.png\" style=\"margin: 0px 20px 0px 20px\">\n",
     "</div>\n",
     "\n"
    ]
@@ -322,21 +324,6 @@
    },
    "source": [
     "PySTAN is a wrapper around STAN, a major3 open-source framework for Bayesian inference developed by Gelman, Carpenter, Hoffman and many others. STAN also has HMC and NUTS samplers, and recently, Variational Inference - which is a very efficient way to approximate the joint probability distribution. Models are specified in a custom syntax and compiled to C++."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "<div style=\"width:90%\"><img src=\"assets/img/github_stan.png\" style=\"margin: 0px 20px 0px 20px\">\n",
-    "</div>\n",
-    "\n",
-    "+ Strong academic support via researchers inc. Gelman, Carpenter, Hoffman etc. (many of them at Columbia Uni)\n",
-    "+ https://github.com/stan-dev/stan"
    ]
   },
   {
@@ -416,7 +403,7 @@
     }
    },
    "source": [
-    "# Lets get on with it\n",
+    "# Get on with it\n",
     "\n",
     "<img src=\"assets/img/getonwithit.jpg\" style=\"margin: 0px 20px 0px 20px; width=45%\"></img>"
    ]
